feat: merge Leaf Segment ID Generator DDD implementation and full test coverage
This commit integrates the following changes from local development:

- Leaf Segment ID Generator (Domain, Infrastructure, Application, Web layers)
- @IdGenerate extension with LEAF_SEGMENT strategy routing
- Domain value objects: BizTag, MaxId, Step, Description, LeafAllocId
- Double-buffer segment ID generation with dynamic step
- Full CRUD application services for LeafAlloc
- REST controller for LeafAlloc management and ID generation
- 168+ tests covering Domain, Infrastructure, Application, Web layers
- Additional tests for auth, dept, dict, menu, gen, role, user modules
- Updated query services, converters, and utilities
- Test pom configuration updates