@@ -1,26 +1,32 @@
 package com.springddd.application.service.dict;
 
+import com.springddd.domain.dict.*;
 import com.springddd.infrastructure.persistence.entity.SysDictItemEntity;
 import com.springddd.infrastructure.persistence.r2dbc.SysDictItemRepository;
 import com.springddd.infrastructure.persistence.r2dbc.SysDictRepository;
-import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import org.springframework.data.r2dbc.core.R2dbcEntityTemplate;
+import org.springframework.data.r2dbc.core.ReactiveSelectOperation;
 import org.springframework.data.relational.core.query.Query;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class WipeSysDictByIdsDomainServiceImplTest {
 
     @Mock
@@ -32,32 +38,34 @@ class WipeSysDictByIdsDomainServiceImplTest {
     @Mock
     private R2dbcEntityTemplate r2dbcEntityTemplate;
 
-    @InjectMocks
-    private WipeSysDictByIdsDomainServiceImpl service;
+    @Mock
+    private ReactiveSelectOperation.ReactiveSelect<SysDictItemEntity> reactiveSelect;
 
-    @Test
-    @DisplayName("deleteByIds 应删除字典及其字典项")
-    void deleteByIds_shouldWipeDictsAndItems() {
-        SysDictItemEntity item = new SysDictItemEntity();
-        item.setId(10L);
+    private WipeSysDictByIdsDomainServiceImpl wipeSysDictByIdsDomainService;
 
-        when(r2dbcEntityTemplate.select(any(Query.class), eq(SysDictItemEntity.class))).thenReturn(Flux.just(item));
-        when(sysDictItemRepository.deleteAllById(anyList())).thenReturn(Mono.empty());
-        when(sysDictRepository.deleteAllById(anyList())).thenReturn(Mono.empty());
-
-        StepVerifier.create(service.deleteByIds(List.of(1L)))
-                .verifyComplete();
-
-        verify(sysDictItemRepository).deleteAllById(List.of(10L));
-        verify(sysDictRepository).deleteAllById(List.of(1L));
+    @BeforeEach
+    void setUp() {
+        wipeSysDictByIdsDomainService = new WipeSysDictByIdsDomainServiceImpl(
+                sysDictRepository,
+                sysDictItemRepository,
+                r2dbcEntityTemplate
+        );
     }
 
     @Test
-    @DisplayName("deleteByIds 应处理空列表")
-    void deleteByIds_shouldHandleEmptyList() {
-        StepVerifier.create(service.deleteByIds(List.of()))
-                .verifyComplete();
+    void deleteByIds_shouldComplete_whenValidIds() {
+        List<Long> ids = Arrays.asList(1L);
+        when(r2dbcEntityTemplate.select(any(Query.class), any())).thenReturn(Flux.empty());
+        when(sysDictItemRepository.deleteAllById(any())).thenReturn(Mono.empty());
+        when(sysDictRepository.deleteAllById(ids)).thenReturn(Mono.empty());
 
-        verify(r2dbcEntityTemplate, never()).select(any(), any());
+        StepVerifier.create(wipeSysDictByIdsDomainService.deleteByIds(ids))
+                .verifyComplete();
+    }
+
+    @Test
+    void deleteByIds_shouldReturnEmpty_whenIdsEmpty() {
+        StepVerifier.create(wipeSysDictByIdsDomainService.deleteByIds(Collections.emptyList()))
+                .verifyComplete();
     }
 }
