@@ -3,138 +3,146 @@ package com.springddd.application.service.gen;
 import com.springddd.application.service.gen.dto.GenTemplatePageQuery;
 import com.springddd.application.service.gen.dto.GenTemplateView;
 import com.springddd.application.service.gen.dto.GenTemplateViewMapStruct;
-import com.springddd.application.service.permission.DataScopeCriteriaBuilder;
 import com.springddd.domain.util.PageResponse;
 import com.springddd.infrastructure.persistence.entity.GenTemplateEntity;
-import com.springddd.infrastructure.persistence.factory.QueryFactory;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import org.springframework.data.r2dbc.core.R2dbcEntityTemplate;
 import org.springframework.data.r2dbc.core.ReactiveSelectOperation;
-import org.springframework.data.relational.core.query.Criteria;
 import org.springframework.data.relational.core.query.Query;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
-import java.lang.reflect.Field;
+import java.util.Collections;
 import java.util.List;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-@org.mockito.junit.jupiter.MockitoSettings(strictness = org.mockito.quality.Strictness.LENIENT)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class GenTemplateQueryServiceTest {
-
-    @Mock
-    private GenTemplateViewMapStruct genTemplateViewMapStruct;
-
-    @Mock
-    private QueryFactory queryFactory;
-
-    @Mock
-    private DataScopeCriteriaBuilder dataScopeCriteriaBuilder;
 
     @Mock
     private R2dbcEntityTemplate r2dbcEntityTemplate;
 
     @Mock
-    private ReactiveSelectOperation.ReactiveSelect<GenTemplateEntity> selectOp;
+    private GenTemplateViewMapStruct genTemplateViewMapStruct;
 
     @Mock
-    private ReactiveSelectOperation.TerminatingSelect<GenTemplateEntity> terminatingSelect;
+    private ReactiveSelectOperation.ReactiveSelect<GenTemplateEntity> reactiveSelect;
 
-    @InjectMocks
-    private GenTemplateQueryService service;
+    private GenTemplateQueryService genTemplateQueryService;
 
     @BeforeEach
-    void setUp() throws Exception {
-        Field qfField = service.getClass().getSuperclass().getDeclaredField("queryFactory");
-        qfField.setAccessible(true);
-        qfField.set(service, queryFactory);
-
-        Field dscbField = service.getClass().getSuperclass().getDeclaredField("dataScopeCriteriaBuilder");
-        dscbField.setAccessible(true);
-        dscbField.set(service, dataScopeCriteriaBuilder);
-
-        when(queryFactory.getR2dbcEntityTemplate()).thenReturn(r2dbcEntityTemplate);
-        when(dataScopeCriteriaBuilder.apply(any(Criteria.class), any())).thenAnswer(inv -> Mono.just(inv.getArgument(0)));
+    void setUp() {
+        genTemplateQueryService = new GenTemplateQueryService(r2dbcEntityTemplate, genTemplateViewMapStruct);
     }
 
     @Test
-    @DisplayName("index 应返回分页结果")
-    void index_shouldReturnPage() {
+    void index_shouldReturnPageResponse_whenEntitiesExist() {
         GenTemplatePageQuery query = new GenTemplatePageQuery();
         query.setPageNum(1);
         query.setPageSize(10);
-        query.setTemplateName("domain");
+        query.setTemplateName("Test");
 
         GenTemplateEntity entity = new GenTemplateEntity();
         entity.setId(1L);
-        entity.setTemplateName("domain");
+        entity.setTemplateName("TestTemplate");
+        entity.setDeleteStatus(false);
 
         GenTemplateView view = new GenTemplateView();
         view.setId(1L);
-        view.setTemplateName("domain");
+        view.setTemplateName("TestTemplate");
 
-        when(r2dbcEntityTemplate.select(GenTemplateEntity.class)).thenReturn(selectOp);
-        when(selectOp.matching(any(Query.class))).thenReturn(terminatingSelect);
-        when(terminatingSelect.all()).thenReturn(Flux.just(entity));
-        when(genTemplateViewMapStruct.toViews(anyList())).thenReturn(List.of(view));
+        when(r2dbcEntityTemplate.select(GenTemplateEntity.class)).thenReturn(reactiveSelect);
+        when(reactiveSelect.matching(any(Query.class))).thenReturn(reactiveSelect);
+        when(reactiveSelect.all()).thenReturn(Flux.just(entity));
         when(r2dbcEntityTemplate.count(any(Query.class), eq(GenTemplateEntity.class))).thenReturn(Mono.just(1L));
+        when(genTemplateViewMapStruct.toViews(any())).thenReturn(Collections.singletonList(view));
 
-        StepVerifier.create(service.index(query))
-                .assertNext(page -> assertThat(page.getList()).hasSize(1))
+        StepVerifier.create(genTemplateQueryService.index(query))
+                .assertNext(pageResponse -> {
+                    assertNotNull(pageResponse);
+                    assertNotNull(pageResponse.getItems());
+                })
                 .verifyComplete();
     }
 
     @Test
-    @DisplayName("recycle 应返回回收站分页结果")
-    void recycle_shouldReturnRecyclePage() {
+    void index_shouldReturnPageResponse_withoutTemplateName() {
         GenTemplatePageQuery query = new GenTemplatePageQuery();
         query.setPageNum(1);
         query.setPageSize(10);
 
         GenTemplateEntity entity = new GenTemplateEntity();
         entity.setId(1L);
+        entity.setDeleteStatus(false);
 
         GenTemplateView view = new GenTemplateView();
         view.setId(1L);
 
-        when(r2dbcEntityTemplate.select(GenTemplateEntity.class)).thenReturn(selectOp);
-        when(selectOp.matching(any(Query.class))).thenReturn(terminatingSelect);
-        when(terminatingSelect.all()).thenReturn(Flux.just(entity));
-        when(genTemplateViewMapStruct.toViews(anyList())).thenReturn(List.of(view));
+        when(r2dbcEntityTemplate.select(GenTemplateEntity.class)).thenReturn(reactiveSelect);
+        when(reactiveSelect.matching(any(Query.class))).thenReturn(reactiveSelect);
+        when(reactiveSelect.all()).thenReturn(Flux.just(entity));
         when(r2dbcEntityTemplate.count(any(Query.class), eq(GenTemplateEntity.class))).thenReturn(Mono.just(1L));
+        when(genTemplateViewMapStruct.toViews(any())).thenReturn(Collections.singletonList(view));
 
-        StepVerifier.create(service.recycle(query))
-                .assertNext(page -> assertThat(page.getList()).hasSize(1))
+        StepVerifier.create(genTemplateQueryService.index(query))
+                .assertNext(pageResponse -> assertNotNull(pageResponse))
                 .verifyComplete();
     }
 
     @Test
-    @DisplayName("queryAllTemplate 应返回所有模板")
-    void queryAllTemplate_shouldReturnAll() {
+    void recycle_shouldReturnPageResponse_whenDeletedEntitiesExist() {
+        GenTemplatePageQuery query = new GenTemplatePageQuery();
+        query.setPageNum(1);
+        query.setPageSize(10);
+
         GenTemplateEntity entity = new GenTemplateEntity();
         entity.setId(1L);
+        entity.setDeleteStatus(true);
 
         GenTemplateView view = new GenTemplateView();
         view.setId(1L);
 
-        when(r2dbcEntityTemplate.select(GenTemplateEntity.class)).thenReturn(selectOp);
-        when(selectOp.matching(any(Query.class))).thenReturn(terminatingSelect);
-        when(terminatingSelect.all()).thenReturn(Flux.just(entity));
-        when(genTemplateViewMapStruct.toViews(anyList())).thenReturn(List.of(view));
+        when(r2dbcEntityTemplate.select(GenTemplateEntity.class)).thenReturn(reactiveSelect);
+        when(reactiveSelect.matching(any(Query.class))).thenReturn(reactiveSelect);
+        when(reactiveSelect.all()).thenReturn(Flux.just(entity));
+        when(r2dbcEntityTemplate.count(any(Query.class), eq(GenTemplateEntity.class))).thenReturn(Mono.just(1L));
+        when(genTemplateViewMapStruct.toViews(any())).thenReturn(Collections.singletonList(view));
 
-        StepVerifier.create(service.queryAllTemplate())
-                .assertNext(list -> assertThat(list).hasSize(1))
+        StepVerifier.create(genTemplateQueryService.recycle(query))
+                .assertNext(pageResponse -> assertNotNull(pageResponse))
+                .verifyComplete();
+    }
+
+    @Test
+    void queryAllTemplate_shouldReturnAllViews() {
+        GenTemplateEntity entity = new GenTemplateEntity();
+        entity.setId(1L);
+        entity.setTemplateName("Template1");
+        entity.setDeleteStatus(false);
+
+        GenTemplateView view = new GenTemplateView();
+        view.setId(1L);
+        view.setTemplateName("Template1");
+
+        when(r2dbcEntityTemplate.select(GenTemplateEntity.class)).thenReturn(reactiveSelect);
+        when(reactiveSelect.matching(any(Query.class))).thenReturn(reactiveSelect);
+        when(reactiveSelect.all()).thenReturn(Flux.just(entity));
+        when(genTemplateViewMapStruct.toViews(any())).thenReturn(Collections.singletonList(view));
+
+        StepVerifier.create(genTemplateQueryService.queryAllTemplate())
+                .expectNext(Collections.singletonList(view))
                 .verifyComplete();
     }
 }
