@@ -1,24 +1,26 @@
 package com.springddd.application.service.menu;
 
 import com.springddd.application.service.menu.dto.SysMenuView;
-import com.springddd.domain.menu.MenuId;
-import com.springddd.domain.menu.SysMenuDomain;
-import com.springddd.domain.menu.SysMenuDomainRepository;
-import org.junit.jupiter.api.DisplayName;
+import com.springddd.domain.menu.*;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class DeleteSysMenuByIdDomainServiceImplTest {
 
     @Mock
@@ -27,42 +29,35 @@ class DeleteSysMenuByIdDomainServiceImplTest {
     @Mock
     private SysMenuQueryService sysMenuQueryService;
 
-    @InjectMocks
-    private DeleteSysMenuByIdDomainServiceImpl service;
+    private DeleteSysMenuByIdDomainServiceImpl deleteSysMenuByIdDomainService;
 
-    @Test
-    @DisplayName("deleteByIds 应删除菜单及其子菜单")
-    void deleteByIds_shouldDeleteAndChildren() {
-        SysMenuView parent = new SysMenuView();
-        parent.setId(1L);
-        parent.setParentId(null);
-
-        SysMenuView child = new SysMenuView();
-        child.setId(2L);
-        child.setParentId(1L);
-
-        when(sysMenuQueryService.queryAllMenu()).thenReturn(Mono.just(List.of(parent, child)));
-
-        SysMenuDomain domain1 = mock(SysMenuDomain.class);
-        SysMenuDomain domain2 = mock(SysMenuDomain.class);
-        when(sysMenuDomainRepository.load(new MenuId(1L))).thenReturn(Mono.just(domain1));
-        when(sysMenuDomainRepository.load(new MenuId(2L))).thenReturn(Mono.just(domain2));
-        when(sysMenuDomainRepository.save(any())).thenReturn(Mono.just(1L));
-
-        StepVerifier.create(service.deleteByIds(List.of(1L)))
-                .verifyComplete();
-
-        verify(domain1).delete();
-        verify(domain2).delete();
-        verify(sysMenuDomainRepository, times(2)).save(any());
+    @BeforeEach
+    void setUp() {
+        deleteSysMenuByIdDomainService = new DeleteSysMenuByIdDomainServiceImpl(
+                sysMenuDomainRepository,
+                sysMenuQueryService
+        );
     }
 
     @Test
-    @DisplayName("deleteByIds 应处理空列表")
-    void deleteByIds_shouldHandleEmptyList() {
-        StepVerifier.create(service.deleteByIds(List.of()))
-                .verifyComplete();
+    void deleteByIds_shouldComplete_whenValidIds() {
+        List<Long> ids = Arrays.asList(1L);
+        SysMenuView view = new SysMenuView();
+        view.setId(1L);
+        view.setParentId(0L);
 
-        verify(sysMenuQueryService, never()).queryAllMenu();
+        SysMenuDomain mockDomain = new SysMenuDomain();
+        when(sysMenuQueryService.queryAllMenu()).thenReturn(Mono.just(Collections.singletonList(view)));
+        when(sysMenuDomainRepository.load(any())).thenReturn(Mono.just(mockDomain));
+        when(sysMenuDomainRepository.save(any())).thenReturn(Mono.just(1L));
+
+        StepVerifier.create(deleteSysMenuByIdDomainService.deleteByIds(ids))
+                .verifyComplete();
+    }
+
+    @Test
+    void deleteByIds_shouldReturnEmpty_whenIdsEmpty() {
+        StepVerifier.create(deleteSysMenuByIdDomainService.deleteByIds(Collections.emptyList()))
+                .verifyComplete();
     }
 }
