@@ -1,22 +1,25 @@
 package com.springddd.application.service.role;
 
+import com.springddd.application.service.role.dto.SysRoleMenuView;
 import com.springddd.application.service.user.SysUserRoleCommandService;
 import com.springddd.application.service.user.SysUserRoleQueryService;
 import com.springddd.application.service.user.dto.SysUserRoleView;
+import com.springddd.domain.role.*;
 import com.springddd.infrastructure.persistence.r2dbc.SysRoleRepository;
-import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class WipeSysRoleByIdsDomainServiceImplTest {
@@ -36,47 +39,61 @@ class WipeSysRoleByIdsDomainServiceImplTest {
     @Mock
     private SysRoleMenuCommandService sysRoleMenuCommandService;
 
-    @InjectMocks
-    private WipeSysRoleByIdsDomainServiceImpl service;
+    private WipeSysRoleByIdsDomainServiceImpl wipeSysRoleByIdsDomainService;
 
-    @Test
-    @DisplayName("deleteByIds 应删除角色及其关联")
-    void deleteByIds_shouldWipeRolesAndRelations() {
-        SysUserRoleView ur = new SysUserRoleView();
-        ur.setId(100L);
-
-        when(sysUserRoleQueryService.queryLinkUserAndRoleByRoleId(1L)).thenReturn(Mono.just(List.of(ur)));
-        when(sysUserRoleCommandService.wipe(anyList())).thenReturn(Mono.empty());
-        when(sysRoleMenuQueryService.queryLinkRoleAndMenus(1L)).thenReturn(Mono.just(List.of()));
-        when(sysRoleRepository.deleteAllById(anyList())).thenReturn(Mono.empty());
-
-        StepVerifier.create(service.deleteByIds(List.of(1L)))
-                .verifyComplete();
-
-        verify(sysUserRoleCommandService).wipe(List.of(100L));
-        verify(sysRoleRepository).deleteAllById(List.of(1L));
+    @BeforeEach
+    void setUp() {
+        wipeSysRoleByIdsDomainService = new WipeSysRoleByIdsDomainServiceImpl(
+                sysRoleRepository,
+                sysUserRoleQueryService,
+                sysUserRoleCommandService,
+                sysRoleMenuQueryService,
+                sysRoleMenuCommandService
+        );
     }
 
     @Test
-    @DisplayName("deleteByIds 当角色关联菜单时应同时删除菜单关联")
-    void deleteByIds_whenRoleHasMenus_shouldWipeMenuRelations() {
-        SysUserRoleView ur = new SysUserRoleView();
-        ur.setId(100L);
+    void deleteByIds_shouldComplete_whenValidIds() {
+        List<Long> ids = Arrays.asList(1L);
+        when(sysUserRoleQueryService.queryLinkUserAndRoleByRoleId(any())).thenReturn(Mono.just(Collections.emptyList()));
+        when(sysRoleMenuQueryService.queryLinkRoleAndMenus(any())).thenReturn(Mono.just(Collections.emptyList()));
+        when(sysRoleRepository.deleteAllById(ids)).thenReturn(Mono.empty());
 
-        com.springddd.application.service.role.dto.SysRoleMenuView rm = new com.springddd.application.service.role.dto.SysRoleMenuView();
-        rm.setId(200L);
-
-        when(sysUserRoleQueryService.queryLinkUserAndRoleByRoleId(1L)).thenReturn(Mono.just(List.of(ur)));
-        when(sysUserRoleCommandService.wipe(anyList())).thenReturn(Mono.empty());
-        when(sysRoleMenuQueryService.queryLinkRoleAndMenus(1L)).thenReturn(Mono.just(List.of(rm)));
-        when(sysRoleMenuCommandService.wipe(anyList())).thenReturn(Mono.empty());
-        when(sysRoleRepository.deleteAllById(anyList())).thenReturn(Mono.empty());
-
-        StepVerifier.create(service.deleteByIds(List.of(1L)))
+        StepVerifier.create(wipeSysRoleByIdsDomainService.deleteByIds(ids))
                 .verifyComplete();
+    }
 
-        verify(sysUserRoleCommandService).wipe(List.of(100L));
-        verify(sysRoleMenuCommandService).wipe(List.of(200L));
-        verify(sysRoleRepository).deleteAllById(List.of(1L));
+    @Test
+    void deleteByIds_shouldWipeRoleMenus_whenMenusExist() {
+        List<Long> ids = Arrays.asList(1L);
+        SysRoleMenuView view = new SysRoleMenuView();
+        view.setId(1L);
+        view.setRoleId(1L);
+        view.setMenuId(2L);
+
+        when(sysUserRoleQueryService.queryLinkUserAndRoleByRoleId(any())).thenReturn(Mono.just(Collections.emptyList()));
+        when(sysRoleMenuQueryService.queryLinkRoleAndMenus(1L)).thenReturn(Mono.just(Collections.singletonList(view)));
+        when(sysRoleMenuCommandService.wipe(any())).thenReturn(Mono.empty());
+        when(sysRoleRepository.deleteAllById(ids)).thenReturn(Mono.empty());
+
+        StepVerifier.create(wipeSysRoleByIdsDomainService.deleteByIds(ids))
+                .verifyComplete();
+    }
+
+    @Test
+    void deleteByIds_shouldWipeUserRoles_whenUserRolesExist() {
+        List<Long> ids = Arrays.asList(1L);
+        SysUserRoleView urView = new SysUserRoleView();
+        urView.setId(1L);
+        urView.setRoleId(1L);
+        urView.setUserId(2L);
+
+        when(sysUserRoleQueryService.queryLinkUserAndRoleByRoleId(1L)).thenReturn(Mono.just(Collections.singletonList(urView)));
+        when(sysUserRoleCommandService.wipe(any())).thenReturn(Mono.empty());
+        when(sysRoleMenuQueryService.queryLinkRoleAndMenus(1L)).thenReturn(Mono.just(Collections.emptyList()));
+        when(sysRoleRepository.deleteAllById(ids)).thenReturn(Mono.empty());
+
+        StepVerifier.create(wipeSysRoleByIdsDomainService.deleteByIds(ids))
+                .verifyComplete();
     }
 }
