@@ -1,25 +1,21 @@
 package com.springddd.application.service.user;
 
 import com.springddd.application.service.user.dto.SysUserRoleView;
-import com.springddd.domain.role.RoleId;
-import com.springddd.domain.user.SysUserRoleDomain;
-import com.springddd.domain.user.SysUserRoleDomainFactory;
-import com.springddd.domain.user.SysUserRoleDomainRepository;
-import com.springddd.domain.user.UserId;
-import com.springddd.domain.user.WipeSysUserRoleByIdsDomainService;
-import org.junit.jupiter.api.DisplayName;
+import com.springddd.domain.user.*;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class LinkUsersAndRolesDomainServiceImplTest {
@@ -36,26 +32,48 @@ class LinkUsersAndRolesDomainServiceImplTest {
     @Mock
     private SysUserRoleDomainFactory sysUserRoleDomainFactory;
 
-    @InjectMocks
-    private LinkUsersAndRolesDomainServiceImpl service;
+    private LinkUsersAndRolesDomainServiceImpl linkUsersAndRolesDomainService;
+
+    @BeforeEach
+    void setUp() {
+        linkUsersAndRolesDomainService = new LinkUsersAndRolesDomainServiceImpl(
+                sysUserRoleQueryService,
+                wipeSysUserRoleByIdsDomainService,
+                sysUserRoleDomainRepository,
+                sysUserRoleDomainFactory
+        );
+    }
 
     @Test
-    @DisplayName("link 应为指定用户和角色创建关联")
-    void link_shouldCreateAssociations() {
-        SysUserRoleView existing = new SysUserRoleView();
-        existing.setId(100L);
+    void link_shouldComplete_whenValidInput() {
+        Long userId = 1L;
+        List<Long> roleIds = Arrays.asList(1L, 2L);
 
-        when(sysUserRoleQueryService.queryLinkUserAndRole(1L)).thenReturn(Mono.just(List.of(existing)));
-        when(wipeSysUserRoleByIdsDomainService.deleteByIds(anyList())).thenReturn(Mono.empty());
-
-        SysUserRoleDomain domain = mock(SysUserRoleDomain.class);
-        when(sysUserRoleDomainFactory.newInstance(any(UserId.class), any(RoleId.class), any())).thenReturn(domain);
+        when(sysUserRoleQueryService.queryLinkUserAndRole(userId)).thenReturn(Mono.just(Collections.emptyList()));
+        when(wipeSysUserRoleByIdsDomainService.deleteByIds(any())).thenReturn(Mono.empty());
+        when(sysUserRoleDomainFactory.newInstance(any(), any(), any())).thenReturn(new SysUserRoleDomain());
         when(sysUserRoleDomainRepository.save(any())).thenReturn(Mono.just(1L));
 
-        StepVerifier.create(service.link(1L, List.of(10L, 20L)))
+        StepVerifier.create(linkUsersAndRolesDomainService.link(userId, roleIds))
                 .verifyComplete();
+    }
 
-        verify(sysUserRoleDomainFactory, times(2)).newInstance(any(UserId.class), any(RoleId.class), any());
-        verify(sysUserRoleDomainRepository, times(2)).save(any());
+    @Test
+    void link_shouldWipeExistingRoles_whenRolesExist() {
+        Long userId = 1L;
+        List<Long> roleIds = Arrays.asList(2L);
+
+        SysUserRoleView view = new SysUserRoleView();
+        view.setId(1L);
+        view.setUserId(userId);
+        view.setRoleId(1L);
+
+        when(sysUserRoleQueryService.queryLinkUserAndRole(userId)).thenReturn(Mono.just(Collections.singletonList(view)));
+        when(wipeSysUserRoleByIdsDomainService.deleteByIds(any())).thenReturn(Mono.empty());
+        when(sysUserRoleDomainFactory.newInstance(any(), any(), any())).thenReturn(new SysUserRoleDomain());
+        when(sysUserRoleDomainRepository.save(any())).thenReturn(Mono.just(1L));
+
+        StepVerifier.create(linkUsersAndRolesDomainService.link(userId, roleIds))
+                .verifyComplete();
     }
 }
