@@ -1,20 +1,22 @@
 package com.springddd.application.service.user;
 
 import com.springddd.application.service.user.dto.SysUserRoleView;
+import com.springddd.domain.user.*;
 import com.springddd.infrastructure.persistence.r2dbc.SysUserRepository;
-import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class WipeSysUserByIdsDomainServiceImplTest {
@@ -28,23 +30,40 @@ class WipeSysUserByIdsDomainServiceImplTest {
     @Mock
     private SysUserRoleCommandService sysUserRoleCommandService;
 
-    @InjectMocks
-    private WipeSysUserByIdsDomainServiceImpl service;
+    private WipeSysUserByIdsDomainServiceImpl wipeSysUserByIdsDomainService;
+
+    @BeforeEach
+    void setUp() {
+        wipeSysUserByIdsDomainService = new WipeSysUserByIdsDomainServiceImpl(
+                sysUserRepository,
+                sysUserRoleQueryService,
+                sysUserRoleCommandService
+        );
+    }
 
     @Test
-    @DisplayName("deleteByIds 应删除用户及其角色关联")
-    void deleteByIds_shouldWipeUsersAndRelations() {
-        SysUserRoleView ur = new SysUserRoleView();
-        ur.setId(100L);
+    void deleteByIds_shouldComplete_whenValidIds() {
+        List<Long> ids = Arrays.asList(1L);
+        when(sysUserRoleQueryService.queryLinkUserAndRole(any())).thenReturn(Mono.just(Collections.emptyList()));
+        when(sysUserRepository.deleteAllById(ids)).thenReturn(Mono.empty());
 
-        when(sysUserRoleQueryService.queryLinkUserAndRole(1L)).thenReturn(Mono.just(List.of(ur)));
-        when(sysUserRoleCommandService.wipe(anyList())).thenReturn(Mono.empty());
-        when(sysUserRepository.deleteAllById(anyList())).thenReturn(Mono.empty());
-
-        StepVerifier.create(service.deleteByIds(List.of(1L)))
+        StepVerifier.create(wipeSysUserByIdsDomainService.deleteByIds(ids))
                 .verifyComplete();
+    }
 
-        verify(sysUserRoleCommandService).wipe(List.of(100L));
-        verify(sysUserRepository).deleteAllById(List.of(1L));
+    @Test
+    void deleteByIds_shouldWipeUserRoles_whenRolesExist() {
+        List<Long> ids = Arrays.asList(1L);
+        SysUserRoleView view = new SysUserRoleView();
+        view.setId(1L);
+        view.setUserId(1L);
+        view.setRoleId(2L);
+
+        when(sysUserRoleQueryService.queryLinkUserAndRole(1L)).thenReturn(Mono.just(Collections.singletonList(view)));
+        when(sysUserRoleCommandService.wipe(any())).thenReturn(Mono.empty());
+        when(sysUserRepository.deleteAllById(ids)).thenReturn(Mono.empty());
+
+        StepVerifier.create(wipeSysUserByIdsDomainService.deleteByIds(ids))
+                .verifyComplete();
     }
 }
